Add to cart buttons connected to back end

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,9 @@
         </div>
         <div class="menu-bar">
             <ul class="menu">
-                <li class="option"><a href="#" class="tag"><i class="fa fa-shopping-basket"></i>cart</a></li>
+                <li class="option"><a href="/users/shoppingCart" class="tag"><i
+                            class="fa fa-shopping-basket"></i>cart</a>
+                </li>
                 {{#if username}}
                 <li class="option dropdown">
                     <a href="#" class="tag dropdown-toggle" data-toggle="dropdown">
@@ -205,7 +207,8 @@
                                 id="featured-img-quick-1">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Cart">
+                            <button type="button" class="btn btn-secondary" title="Add to Cart" productId=""
+                                id="featured-img-shop-1">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -223,7 +226,8 @@
                                 id="featured-img-quick-2">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Cart">
+                            <button type="button" class="btn btn-secondary" title="Add to Cart" productId=""
+                                id="featured-img-shop-2">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -241,7 +245,8 @@
                                 id="featured-img-quick-3">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Cart">
+                            <button type="button" class="btn btn-secondary" title="Add to Cart" productId=""
+                                id="featured-img-shop-3">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -259,7 +264,8 @@
                                 id="featured-img-quick-4">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Quick Cart">
+                            <button type="button" class="btn btn-secondary" title="Quick Cart" productId=""
+                                id="featured-img-shop-4">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
